--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.7.0",
     "pinia": "^2.1.4",
     "primeicons": "^6.0.1",
     "primevue": "^3.30.1",
