--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "flowbite": "^1.7.0",
+    "laravel-vue-pagination": "^4.1.0",
     "pinia": "^2.1.4",
     "primeicons": "^6.0.1",
     "primevue": "^3.30.1",
